<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/loginUserMailEdit"
            android:hint="@string/loginUserHintTextView" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="12dp"/>
    <TextView
            android:text="@string/loginTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textStyle="bold" android:textAlignment="center" android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.078"/>
    <TextView
            android:text="@string/loginUserTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="18sp" android:textAlignment="viewStart"
            android:textStyle="bold" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.016" android:layout_marginStart="68dp"/>
    <TextView
            android:text="@string/loginPassTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textSize="18sp"
            android:textAlignment="viewStart" android:textStyle="bold" android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/loginUserMailEdit" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.104"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/loginPassEdit"
            app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.048" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/loginUserMailEdit" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.063"
            android:hint="@string/loginHintPass"/>
    <Button
            android:text="@string/loginLogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/loginLogButton" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/loginPassEdit" app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintVertical_bias="0.136"/>
</android.support.constraint.ConstraintLayout>